http worker: handle dav[s] protocol

BUG: 365356